Fix CORS: add CorsFilter, permit OPTIONS, skip JWT processing for OPTIONS